[gd_scene load_steps=4 format=3 uid="uid://cj8oaotvfa5ga"]

[ext_resource type="Script" path="res://Scenes/UI/custom_card_area.gd" id="1_yk32f"]
[ext_resource type="Texture2D" uid="uid://d4fruxiccqx85" path="res://Assets/CardIcons/cardIconEmpty.png" id="2_rf8y4"]
[ext_resource type="Texture2D" uid="uid://df2mxdndsikr4" path="res://Assets/CardIcons/outline.png" id="3_fytpm"]

[node name="CustomCardArea" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yk32f")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -40.0
offset_top = -10.0
offset_right = 1760.0
offset_bottom = 1190.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("2_rf8y4")
ignore_texture_size = true
stretch_mode = 3

[node name="HoverOutline" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.172549)
position = Vector2(50, 50)
scale = Vector2(0.13, 0.13)
texture = ExtResource("3_fytpm")

[node name="Outline" type="Sprite2D" parent="."]
visible = false
position = Vector2(50, 50)
scale = Vector2(0.13, 0.13)
texture = ExtResource("3_fytpm")

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="focus_entered" from="TextureButton" to="." method="_on_texture_button_focus_entered"]
[connection signal="focus_exited" from="TextureButton" to="." method="_on_texture_button_focus_exited"]
[connection signal="gui_input" from="TextureButton" to="." method="_on_texture_button_gui_input"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
